--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Corey Haines",
   "scripts": {
     "dev": "parcel --out-dir dev-output src/index.html",
-    "build": "rm docs/*.js docs/*.js.map && parcel build --out-dir docs src/index.html"
+    "build": "rm docs/*.js docs/*.js.map || parcel build --out-dir docs src/index.html"
   },
   "dependencies": {
     "parcel": "^1.12.4",
