Reinstall things as dev dependencies

--- a/package.json
+++ b/package.json
@@ -13,13 +13,10 @@
     "type": "git",
     "url": "git+https://github.com/coreyhaines/generate-project-name"
   },
-  "dependencies": {
-    "node-forge": "^0.10.0",
-    "parcel": "^1.12.4",
-    "parcel-bundler": "^1.12.4"
-  },
+  "dependencies": {},
   "devDependencies": {
     "elm-hot": "^1.1.5",
-    "node-elm-compiler": "^5.0.5"
+    "node-elm-compiler": "^5.0.5",
+    "parcel": "^1.12.4"
   }
 }
